fix(basic cards list): remove whitespace on list sides
affects: @buildit/gravity-ui-web

--- a/packages/gravity-ui-web/src/sass/05-components/03-organisms/_list-cards-basic.scss
+++ b/packages/gravity-ui-web/src/sass/05-components/03-organisms/_list-cards-basic.scss
@@ -1,6 +1,7 @@
 .grav-c-list-cards-basic {
   $breakpoint-1: gravy-breakpoint(medium);
   $breakpoint-2: gravy-breakpoint(large);
+  margin: 0 -$grav-sp-l;
   padding: 0;
   list-style-type: none;
 
@@ -12,7 +13,6 @@
   > li + li {
     margin-top: $grav-sp-xl;
   }
-
 
   @media all and (min-width: $breakpoint-1) {
     > {
